[Modify] stream에서 Map 형식으로 조회 수정